tests/baselines/reference/constructorAsType.errors.txt
tests/cases/compiler/constructorAsType.ts(1,5): error TS2322: Type '() => { name: 文字; }' is not assignable to type '新建 () => { name: 文字; }'.
  Type '() => { name: 文字; }' provides no match for the signature 'new (): { name: string; }'.


==== tests/cases/compiler/constructorAsType.ts (1 errors) ====
    var Person:new () => {name: string;} = function () {return {name:"joe"};};
        ~~~~~~
!!! error TS2322: Type '() => { name: 文字; }' is not assignable to type '新建 () => { name: 文字; }'.
!!! error TS2322:   Type '() => { name: 文字; }' provides no match for the signature 'new (): { name: string; }'.
    
    var Person2:{new() : {name:string;};};
    
    Person = Person2;